--- a/dissertation/mpaper.tex
+++ b/dissertation/mpaper.tex
@@ -19,7 +19,7 @@
 \maketitle
 
 \begin{abstract}
-Despite significant advancements in motor-vehicle safety, such progress has not yet extended to cyclists, who continue to suffer thousands of fatal injuries annually worldwide, often due to collisions with road vehicles approaching from behind. Typical cyclist safety technologies rely on visual and auditory alerts for approaching vehicles, however, these sensory channels are often already in use whilst cycling. Vibrotactile stimulation offers a suitable alternative. Despite much prior work investigating methods for delivering vibration stimuli, few have explored how this can be used for cycling safety. In response, we continue previous work from Vo et al. \cite{10.1145/3411763.3451580} to develop TactiHelm: a vibrotactile, helmet-based, hazard-notification system, which can effectively warn a cyclist of vehicles approaching from behind. We combined a commercial bike radar with a modified cycling helmet to detect and convey distance information for approaching vehicles, using tactile actuators placed along the sagittal midline of the helmet. We conducted a study investigating how distance information can be encoded using the pattern and duration of a vibrotactile cue. Results showed that encoding schemes which vary the number of cue deliveries, led to a significantly higher percentage of correctly interpreted cues. Furthermore, participants preferred tactile patterns which create a sensation of movement across the scalp. TactiHelm was shown to be effective in real life, with commuter cyclists reporting its usefulness in portraying the approach of a vehicle, without consuming their sight or hearing, making them feel safer.
+Despite significant advancements in motor-vehicle safety, such progress has not yet extended to cyclists, who continue to suffer thousands of fatal injuries annually worldwide, often due to collisions with road vehicles approaching from behind. Typical cyclist safety technologies rely on visual and auditory alerts for approaching vehicles, however, these sensory channels are often already in use whilst cycling. Vibrotactile stimulation offers a suitable alternative. Despite much prior work investigating methods for delivering vibration stimuli, few have explored how this can be used for cycling safety. In response, we continue previous work to develop TactiHelm: a vibrotactile, helmet-based, hazard-notification system, which can effectively warn a cyclist of vehicles approaching from behind. We combined a commercial bike radar with a modified cycling helmet to detect and convey distance information for approaching vehicles, using tactile actuators placed along the sagittal midline of the helmet. We conducted a study investigating how distance information can be encoded using the pattern and duration of a vibrotactile cue. Results showed that encoding schemes which vary the number of cue deliveries, led to a significantly higher percentage of correctly interpreted cues. Furthermore, participants preferred tactile patterns which create a sensation of movement across the scalp. TactiHelm was shown to be effective in real life, with commuter cyclists reporting its usefulness in portraying the approach of a vehicle, without consuming their sight or hearing, making them feel safer.
 \end{abstract}
 
 \section{Introduction}
@@ -45,7 +45,7 @@ Little literature exists on the use of vibrotactile feedback for cycling, and of
 \subsection{Hazard Notification for Cyclist Safety}
 Hazard notification systems were first explored by Horowitz and Dingus \cite{doi:10.1177/154193129203601320}, who proposed ideas, such as varying the warning intensity based off the detected collision time, and using different signal modalities to convey various warning severities. These concepts have been used often in later research, such as by Langer and Jochem \cite{566402} and Huang et al. \cite{1307429} who combined radar and vision technologies to detect and classify road vehicles ahead of the car, with up to 97\% accuracy, showing that even relatively older vehicle detection systems are highly reliable.
 
-Jenkins et al. \cite{7929602} showed how cyclist detection could be implemented using Bicycle to Vehicle communication systems. By outfitting cyclists with a human-machine interface (HMI), they were able to receive basic safety messages, delivered using multimodal audio and haptic cues, from a smartphone speaker and attachable handlebar grips \cite{smartgrips}. These safety messages were categorised into five levels, describing recommended actions to the cyclist. Lujic et al. \cite{10.1145/3434770.3459732} furthers this idea, by creating an Edge network around a city which would detect when a pedestrian or cyclist entered a vehicles' blind spot, sending a visual and auditory warning to driver's mobile device in real-time using 5G. Although only visual and auditory feedback is utilised, these papers showcase the potential ways in which cyclist safety can be improved. Furthermore, they highlight potential warning messages which could be used in our system. These don't necessarily convey information about the potential threat, but rather they recommend actions to avoid danger.
+Jenkins et al. \cite{7929602} showed how cyclist detection could be implemented using Bicycle to Vehicle communication systems. By outfitting cyclists with a human-machine interface (HMI), they were able to receive basic safety messages, delivered using multimodal audio and haptic cues, from a smartphone speaker and attachable handlebar grips \cite{smartgrips}. These safety messages were categorised into five levels, describing recommended actions to the cyclist. Lujic et al. \cite{10.1145/3434770.3459732} furthers this idea, by creating an Edge network around a city which would detect when a pedestrian or cyclist entered a vehicles' blind spot, sending a visual and auditory warning to driver's mobile device in real-time using 5G. These papers showcase the potential ways in which feedback modalities can be used to improve cyclist safety. Furthermore, they highlight potential warning messages which could be used in our system. These don't necessarily convey information about the potential threat, but rather they recommend actions to avoid danger.
 
 These warning systems are examples of Intelligent Transport Systems (ITSs) - a series of technologies which aim to improve the safety of transportation \cite{its}. Although few address how the safety of vulnerable road users (VRUs), such as cyclists, can be improved \cite{Scholliers2017}, of those which do, a quantitative safety impact assessment found that vehicles which contain a dedicated VRU detection system would have the greatest impact for cyclists \cite{SILLA2017134}. However, despite their potential for improving cyclist safety, studies have shown that pre-existing attitudes and perceptions affect the acceptance of such systems. One such study from Angelis et al. \cite{de2017negative}, found that drivers who already express a negative representation of cyclists are more unlikely to use a cyclist detection system, compared to those who do not. This is further explored by Berge et al. \cite{berge2022cyclists} who studied acceptance from the perspective of the cyclist. Through questionnaires and interviews, the authors found that cyclists were worried about using technologies, such as HMIs, as they believed such technologies would force them to take responsibility over safety critical situations, regardless of whether or not it was their fault. This finding motivates the need to further study cyclists' beliefs and attitudes towards cycling safety, to ensure that a technology such as TactiHelm would be accepted.
 
@@ -53,11 +53,11 @@ These warning systems are examples of Intelligent Transport Systems (ITSs) - a s
 \subsection{Feedback Modalities in Cycling}
 Wolfe et al. \cite{wolfe2016distracted} investigated different types of distractions which cyclists commonly face, finding that auditory distractions were most common, followed shortly by visual ones. These distractions commonly occur from interaction with a mobile device, which studies have found to increase the risk of crashing whilst cycling \cite{mwakalonge2014distracted, doi:10.1080/19439962.2019.1591559}. With over half a surveyed population admitting to using their mobile device on every trip \cite{GOLDENBELD20121}, there have been calls to put legislation in place to prevent the use of smartphones whilst cycling \cite{banphoneuse}. While some studies investigate ways to improve smartphone interaction whilst cycling to reduce distraction \cite{10.1145/3544548.3580971, 10.1145/3152832.3152871} other approaches have investigated alternative interaction modalities, which don’t consume the cyclists visual senses.
 
-Pielot et al. showed how vibrotactile stimulation can be effective in improving cyclists visual focus, by developing Tacticycle - a bicycle with a set of directional cues encoded by the relative intensity across both handlebars \cite{10.1145/2371574.2371631}. Although the authors remark that the navigational routes used in their study were simple, no participants reported losing orientation, and positively described the ease of interpreting the vibrotactile cues, with minimal cognitive effort. Steltenpohl and Bouwer support these findings using Vibrobelt - a vibrotactile belt also developed to aid navigation while cycling \cite{10.1145/2449396.2449450}. Through analysis of visual focus and spatial knowledge acquisition, they found that Vibrobelt increased participants ability to recall images from the route; however, they were generally slower at navigating. These studies showed that using vibrotactile feedback is an effective way of communicating information without decreasing the cyclists visual focus - an important aspect of cycling.
+Pielot et al. showed how vibrotactile stimulation can be effective in improving cyclists' visual focus, by developing Tacticycle - a bicycle with a set of directional cues encoded by the relative intensity across both handlebars \cite{10.1145/2371574.2371631}. Although the authors remark that the navigational routes used in their study were simple, no participants reported losing orientation, and positively described the ease of interpreting the vibrotactile cues, with minimal cognitive effort. Steltenpohl and Bouwer support these findings using Vibrobelt - a vibrotactile belt also developed to aid navigation while cycling \cite{10.1145/2449396.2449450}. Through analysis of visual focus and spatial knowledge acquisition, they found that Vibrobelt increased participants ability to recall images from the route; however, they were generally slower at navigating. These studies showed that vibrotactile feedback is an effective way of communicating information without decreasing the cyclists' visual focus - an important aspect of cycling.
 
-This concept of utilising different sensory channels to convey information is studied by Wickens \cite{wickens1984processing} and Wickens and Liu \cite{doi:10.1177/001872088803000505}, who explored \textit{Multiple Resource Theory} - a model of human information processing which predicts that attention is a limited cognitive resource that can be allocated across different tasks and modalities. The model implies that multiple sensory channels can be used simultaneously, without impairing the attention of an individual, within their cognitive capacity. Seeking to take advantage of this concept, Wickens suggests that tasks can be configured to utilise multiple sensory channels - exploiting our information-processing capabilities.
+This concept of utilising different sensory channels to convey information is studied by Wickens \cite{wickens1984processing} and Wickens and Liu \cite{doi:10.1177/001872088803000505}, who explored \textit{Multiple Resource Theory} - a model of human information processing which predicts that attention is a limited cognitive resource that can be allocated across different tasks and modalities. The model implies that multiple sensory channels can be used simultaneously, without impairing the attention of an individual, within their cognitive capacity. Seeking to take advantage of this concept, Wickens suggests that tasks can be configured to utilise these multiple sensory channels - exploiting our information-processing capabilities.
 
-Previous studies have explored this idea further, by comparing the effectiveness of unimodal and multimodal warning messages for cyclists. Strohaeker et al. \cite{STROHAEKER2022151} compared auditory and vibrotactile warnings. They found that auditory warnings were more effective for decreasing participants response time to potential collisions, but vibrotactile warnings were still effective for a system which does not require urgent reactions from the cyclist. However, a study conducted by Peeters et al. found that vibrotactile signals were not only perceivable during diverse levels of physical effort, but that cyclists' reaction time to stimuli shortened as they cycled with greater effort - acknowledging the potential of utilising tactile feedback for cycling \cite{peeters2019vibrotactile}. Matviienko et al. \cite{10.1145/3290605.3300850, 10.1145/3229434.3229479} expanded upon this research by comparing the delivery of navigational instructions to child cyclists using visual, auditory, and vibrotactile feedback. Their results showed that when instructions were delivered multimodally, cue interpretation accuracy increased and cyclists showed a shorter reaction time to potential dangers. These findings are backed by Sawitzky et al. \cite{10.1145/3490099.3511127, mti6010003} who similarly compared the combination of different awareness message modalities for cyclists, finding that a multimodal combination of visual messages and auditory icons was preferred by participants. 
+Previous studies have explored this idea further, by comparing the effectiveness of unimodal and multimodal warning messages for cyclists. Strohaeker et al. \cite{STROHAEKER2022151} compared auditory and vibrotactile warnings. They found that auditory warnings were more effective for decreasing participants response time to potential collisions, but vibrotactile warnings were still effective for a system which does not require urgent reactions from the cyclist. However, a study conducted by Peeters et al. \cite{peeters2019vibrotactile} found that vibrotactile signals were not only perceivable during diverse levels of physical effort, but that cyclists' reaction time to stimuli shortened as they cycled with greater effort, acknowledging the potential of utilising tactile feedback for cycling. Matviienko et al. \cite{10.1145/3290605.3300850, 10.1145/3229434.3229479} expanded upon this research by comparing the delivery of navigational instructions to child cyclists using visual, auditory, and vibrotactile feedback. Their results showed that when instructions were delivered multimodally, cue interpretation accuracy increased and cyclists showed a shorter reaction time to potential dangers. These findings are backed by Sawitzky et al. \cite{10.1145/3490099.3511127, mti6010003} who similarly compared the combination of different awareness message modalities for cyclists, finding that a multimodal combination of visual messages and auditory icons was preferred by participants. 
 Although these studies clearly outline the potential benefits of providing feedback multimodally, we keep our TactiHelm system restricted to only unimodal vibrotactile feedback, so that we may thoroughly assess the impact this has on cyclists' perceived safety and focus.
 
 Despite auditory and vibrotactile modalities having the potential to aid visual feedback, they each have disadvantages. Waard et al. \cite{DEWAARD2011626} found that 68\% of auditory cues were missed when participants were listing to music, an act which many admit to doing. Although this could be mitigated by wearing bone conducting headphones \cite{wolfe2016distracted}, May and Walker \cite{may2017effects} found that their usage worsened participants ability to localise critical environment sounds. Erdei et al. \cite{erdei2020comparing, doi:10.1080/15389588.2021.1985113} reported that perception of vibrotactile signals worsen when cycling over surfaces which cause haptic interference. However, they suggested this could be overcome by adjusting how the stimuli was delivered to the cyclist. This motivates our decision to deliver vibrotactile stimuli through the cycling helmet, as this remains in-contact with the rider at all points of the journey and haptic interference received from the terrain dissipates the further it travels \cite{9415164}, with the helmet being one of the furthest points of contact away from the source of interference. Therefore, delivering tactile stimuli from the helmet to the scalp allows for greater perception.
@@ -78,7 +78,7 @@ This finding motivated Prasad et al. \cite{10.1145/2556288.2557404} to develop H
 
 
 \subsection{Vibrotactile Stimulation on the Head}
-Gilliland and Schlegel \cite{doi:10.1177/001872089403600410} studied the spatial acuity of the head, investigating how various configurations of 4 to 12 tactile actuators, placed across the coronal plane of the head (from ear to ear), affected localisation ability. They found that optimal tactile detection and localization accuracy occurred when using six tactors - with a 93\% accuracy. More than this, and both the accuracy and reaction time worsened. 
+Gilliland and Schlegel \cite{doi:10.1177/001872089403600410} studied the spatial acuity of the head, investigating how various configurations of 4 to 12 tactile actuators, placed across the coronal plane of the head (from ear to ear), affected localisation ability. They found that optimal tactile detection and localization accuracy occurred when using six actuators - with a 93\% accuracy. More than this, and both the accuracy and reaction time worsened. 
 
 Myles and Kalb \cite{headguidelines} explored how tactile perception varied across different regions of the head, using various configurations of eight actuators. They found that the scalp was the least sensitive loci on the head, whereas, the regions around the axial plane of the head (namely the forehead, occipital, and temple regions) were the most sensitive. These different regions can be seen in Figure \ref{fig:head-regions}. In subsequent research, Myles et al. \cite{MYLES2015177} determined that the density of hair on the head only minimally impacts tactile perception. Furthermore, this effect is confined to only the regions of the head which are the least sensitive.
 
@@ -174,7 +174,7 @@ The goal of this experiment was to investigate how different distance categories
 \subsubsection{Independent Variables}
 The experiment centered around the delivery of distance information, which was composed of three independent variables: the distance category, the vibration pattern, and cue duration. The combination of the pattern and duration created six unique experimental conditions, known as the distance encoding schemes. When combined with the three distance categories (\textit{far}, \textit{near}, and \textit{imminent}), they create 18 vibrotactile cues. How the pattern and duration effect the parameters of a vibrotactile cue can be seen in Table \ref{tab:location} and Figure \ref{fig:cue-table}.
 
-\textbf{Pattern:} The vibration pattern is a composite parameter, which combines the location of a vibration (which actuator should be activated), and the delay between delivered stimuli (known as the inter-stimulus-interval, as described in Section \ref{sec:apparatus}). The vibration pattern had three distinct levels: \textit{Singular}, \textit{Wall}, and \textit{Wave}. With a \textit{Singular} pattern, only a single actuator at the location relative to the specified distance is activated. With a \textit{Wall} pattern, all actuators, from the rear to the one at the location relative to the specified distance, are activated at the same time. The \textit{Wave} pattern works similarly, however, there is a delay of 150ms between each actuators activation. The names of these patterns are inspired from a pilot study with a single participant, who described the feeling of the patterns as \textit{‘creating a wall’} or \textit{‘moving like a wave across your head’}. 
+\textbf{Pattern:} The vibration pattern is a composite parameter, which combines the location of a vibration (the activated actuator), and the delay between delivered stimuli (also known as the inter-stimulus-interval). The vibration pattern had three distinct levels: \textit{Singular}, \textit{Wall}, and \textit{Wave}. With a \textit{Singular} pattern, only a single actuator at the location relative to the specified distance is activated. With a \textit{Wall} pattern, all actuators, from the rear to the one at the location relative to the specified distance, are activated simultaneously. The \textit{Wave} pattern works similarly, however, there is a delay of 150ms between each actuators activation. These pattern names are inspired from a pilot study with a single participant, who described the feeling of the patterns as \textit{‘creating a wall’} or \textit{‘moving like a wave across your head’}. 
 
 \textbf{Duration:} In this study, we define duration as the number of times a vibrotactile cue is delivered and had two distinct levels: \textit{Constant} and \textit{Varying}. With a \textit{Constant} duration, each vibration cue was delivered only once. With a \textit{Varying} duration, the number of times a cue is delivered increased as the distance decreased. 
 
@@ -188,14 +188,14 @@ The experiment centered around the delivery of distance information, which was c
         Near & M & R+M & R$\rightarrow$M & 1 & 2\\ 
         Imminent & F & R+M+F & R$\rightarrow$M$\rightarrow$F & 1 & 3\\ 
     \end{tabular}
-    \caption{Table shows the activated actuators and number of deliveries for each distance, pattern and duration level. R, M, and F denote activation of the Rear, Mid, Front actuator respectively. + denotes simultaneous activation and $\rightarrow$ denotes delayed activation.}
+    \caption{Table shows the activated actuators and number of deliveries for each distance, pattern and duration level. R, M, and F refers to the Rear, Mid, and Front actuator respectively. + denotes simultaneous activation and $\rightarrow$ denotes delayed activation.}
     \label{tab:location}
 \end{table*}
 
 \begin{figure*}[h]
     \centering
     \includegraphics[width=0.75\textwidth]{images/cue-table.pdf}
-    \caption{Diagram shows how the vibrotactile cues are delivered to each actuator, depending on the distance, pattern, and duration.}
+    \caption{Diagram shows the vibrotactile cues delivered to each actuator, depending on the distance, pattern, and duration.}
     \label{fig:cue-table}
 \end{figure*}
 
@@ -216,7 +216,7 @@ The helmet with the described configuration of tactile actuators was used to del
 
 
 \subsubsection{Dependent Measures}
-Following our defined research questions for the evaluation, we determine our dependent measures to be the usability of the encoding schemes, and the information perception of participants using such schemes. We measure the usability of an encoding scheme in terms of its usefulness, distinguishability, interpretability, intuitiveness, and length of its cues. This is measured using a combination of qualitative feedback and 5-point Likert scale questions in a post-experiment questionnaire \cite{joshi2015likert}. We measure information perception by recording the errors made by participants in identifying the correct cues. Finally, we analyse participants responses to the applied questionnaire to further understand additional related factors, such as their perception of the tactors, the comfort of the helmet, and their understanding of following distance.
+Following our defined research questions for the evaluation, we determine our dependent measures to be the usability of the encoding schemes, and the information perception of participants using such schemes. We measure the usability of an encoding scheme in terms of its usefulness, distinguishability, interpretability, intuitiveness, and length of its cues. This is measured using a combination of qualitative feedback and 5-point Likert scale questions in a post-experiment questionnaire \cite{joshi2015likert}. We measure information perception by recording the errors made by participants in identifying the correct cues. Finally, we analyse participants responses to the applied questionnaire to further understand additional related factors, such as their perception of the actuators, the comfort of the helmet, and their understanding of following distance.
 
 \begin{table*}[h]
     \centering
@@ -302,7 +302,7 @@ The applied Friedman tests showed that there were significant differences across
 \subsubsection{Information Perception}
 Information perception was measured by recording the number of errors made by participants in identifying the correct distance cues. Figure \ref{fig:mean-correct} presents these results for each distance category for each scheme. Our two-way ANOVA test revealed there were statistically significant differences between pairs of schemes (\textit{F}=9.25, \textit{p}<.05) and distance cues (\textit{F}=14.86, \textit{p}<.05), and there was a significant interaction between these two groups (\textit{F}=6.83, \textit{p}<.05).
 
-\textbf{Differences in cue perception within schemes:} The t-tests revealed there was a significant difference in cue perception between the far (\textit{M}=96.16\%, \textit{SD}=4.70\%) and imminent (\textit{M}=87.94\%, \textit{SD}=8.98\%) distance cues; \textit{t}=4.54, \textit{p}<.05. However, the only scheme to exhibit this difference was the \textit{Wall Constant} scheme; \textit{t}=5.25, \textit{p}<.05. Similarly a significant difference was found between the imminent and near (\textit{M}=94.30\%, \textit{SD}=5.23\%) cues; \textit{t}=-3.78, \textit{p}<.05. However, only this was only seen in the \textit{Singular Constant} (\textit{t}=-2.69, \textit{p}<.05) and \textit{Wall Constant} (\textit{t}=-3.36, \textit{p}<.05) schemes. There was no significant difference found between the far and near cues; \textit{t}=1.58, \textit{p}=0.13.
+\textbf{Differences in cue perception within schemes:} The t-tests revealed there was a significant difference in cue perception between the \textit{far} (\textit{M}=96.16\%, \textit{SD}=4.70\%) and \textit{imminent} (\textit{M}=87.94\%, \textit{SD}=8.98\%) distance cues; \textit{t}=4.54, \textit{p}<.05. However, the only scheme to exhibit this difference was the \textit{Wall Constant} scheme; \textit{t}=5.25, \textit{p}<.05. Similarly a significant difference was found between the \textit{imminent} and \textit{near} (\textit{M}=94.30\%, \textit{SD}=5.23\%) cues; \textit{t}=-3.78, \textit{p}<.05. However, this was only seen in the \textit{Singular Constant} (\textit{t}=-2.69, \textit{p}<.05) and \textit{Wall Constant} (\textit{t}=-3.36, \textit{p}<.05) schemes. There was no significant difference found between the \textit{far} and \textit{near} cues; \textit{t}=1.58, \textit{p}=0.13.
 
 \textbf{Far Cue:} The only statistically significant difference found via the t-tests for the far distance cue, was between the \textit{Wall} and \textit{Wave Varying} scheme; \textit{t}=2.19, \textit{p}<.05.
 
@@ -317,14 +317,14 @@ Information perception was measured by recording the number of errors made by pa
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.44\textwidth]{dissertation/images/Mean Correct by Encoding Scheme.pdf}
-    \caption{Figure shows the recognition of distance cues across the six schemes.}
+    \caption{Cue identification success ratio of each distance cue across the six schemes.}
     \label{fig:mean-correct}
 \end{figure}
 
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.40\textwidth]{dissertation/images/heatmaps.pdf}
-    \caption{Figure shows the cue identification success ratio for each distance per scheme.}
+    \caption{Percentage of guessed distance cues for each distance per scheme.}
     \label{fig:heatmaps}
 \end{figure}
 
@@ -408,7 +408,7 @@ Participants were then tasked with recording two commutes - from their work to t
 \begin{table*}[h]
     \centering
     \begin{tabular}{l|ccccc|ccccc|cc}
-    \multicolumn{1}{c}{} & \multicolumn{5}{c|}{WITH TACTIHELM} & \multicolumn{5}{c|}{WITHOUT TACTIHELM} & \multicolumn{2}{c}{t-tests} \\ \cline{2-13}
+    \multicolumn{1}{c|}{} & \multicolumn{5}{c|}{WITH TACTIHELM} & \multicolumn{5}{c|}{WITHOUT TACTIHELM} & \multicolumn{2}{c}{t-tests} \\ \cline{2-13}
     Factor & Mean & Median & SD & Min. & Max. & Mean & Median & SD & Min. & Max. & Stat & p \\ \hline
     MD & 55.0 & 60.0 & 20.92 & 25.0 & 80.0 & 67.0 & 70.0 & 4.47 & 60.0 & 70.0 & -1.32 & 0.26 \\
     PD & 34.0 & 25.0 & 21.04 & 20.0 & 70.0 & 40.0 & 40.0 & 22.64 & 15.0 & 65.0  & -1.25 & 0.28 \\
@@ -418,7 +418,7 @@ Participants were then tasked with recording two commutes - from their work to t
     Fru. & 39.0 & 40.0 & 29.03 & 5.0 & 70.0 & 41.0 & 35.0 & 24.85 & 10.0 & 75.0 & -0.57 & 0.60 \\
     RTLX & 42.5 & 35.83 & 17.67 & 21.67 & 65.83 & 45.17 & 48.33 & 5.51 & 36.67 & 49.17 & -0.73 & 0.51 \\
     \end{tabular}
-    \caption{Comparison of NASA-RTLX stats for two conditions: With TactiHelm and Without TactiHelm (0 Very Low - 100 Very High).}
+    \caption{Comparison of NASA-RTLX stats for With TactiHelm and Without TactiHelm conditions (0 Very Low - 100 Very High).}
     \label{tab:nasa-rtlx-stats}
 \end{table*}
 
@@ -448,7 +448,7 @@ The aim of this study was to evaluate the effectiveness our developed TactiHelm 
 
 \textbf{RQ2.1 (effectiveness of our vibrotactile cues):} Participants enjoyed the feeling created by the vibrotactile cues under the \textit{Wave Varying} encoding scheme - finding it helpful in portraying the image of an approaching vehicle. Although perception of the actuators was rated highly, the inaccurate timing of the delivery of the cues caused \textit{far} cues to be delivered too early and \textit{imminent} cues to be delivered too late, leading to the temporal masking of \textit{near} cues. 
 
-This inaccuracy was likely caused by a variety of issues. It is possible that our threshold values defining our distance categories (seen in Table \ref{tab:fd-thresholds}) were not optimally defined. The value of 1500ms defining when detected vehicles transition from \textit{near} to \textit{imminent} could be decreased to prevent the premature conveyance of an \textit{imminent} cue and allowing more time between the delivery of the \textit{near} and \textit{imminent} cue. Additionally, to prevent the controller application and Arduino from being overwhelmed, we restricted the transfer of data from the bike radar to the controller to occur only every two seconds. In this time frame, it is likely that a vehicle may have transitioned between distance categories, causing the immediate delivery of a cue. Furthermore, there was a mixed response regarding whether participants enjoyed the length of the cue (\textit{Strongly Agree}=3, \textit{Somewhat disagree}=2). Of those who disagreed, they stated that the 2000ms length of the imminent cue took was too long, and that a vehicle could have changed distance category by the time the cue was conveyed. Future work would improve the processing speed of the system to remove this delay. Finally, since the range of the radar was 140 metres, any vehicle within this range would be detected, causing an early conveyance of the \textit{far} cue. To prevent this, a cap could be introduced to only deliver a cue if the vehicle is within a specified range, such as closer than 100 metres.
+This inaccuracy was likely caused by a variety of issues. It is possible that our threshold values defining our distance categories (Table \ref{tab:fd-thresholds}) were not optimally defined. The value of 1500ms defining when detected vehicles transition from \textit{near} to \textit{imminent} could be decreased to prevent the premature conveyance of an \textit{imminent} cue and allowing more time between the delivery of the \textit{near} and \textit{imminent} cue. Additionally, to prevent the controller application and Arduino from being overwhelmed, we restricted the transfer of data from the bike radar to the controller to occur only every two seconds. In this time frame, it is likely that a vehicle may have transitioned between distance categories, causing the immediate delivery of a cue. Furthermore, there was a mixed response regarding whether participants enjoyed the length of the cue (\textit{Strongly Agree}=3, \textit{Somewhat disagree}=2). Of those who disagreed, they stated that the 2000ms length of the imminent cue took was too long, and that a vehicle could have changed distance category by the time the cue was conveyed. Future work would improve the processing speed of the system to remove this delay. Finally, since the range of the radar was 140 metres, any vehicle within this range would be detected, causing an early conveyance of the \textit{far} cue. To prevent this, a cap could be introduced to only deliver a cue if the vehicle is within a specified range, such as closer than 100 metres.
 
 \textbf{RQ2.2 (perceived safety):} Our average SUS score of 73.5 is typically considered to be \textit{good} \cite{10.5555/2835587.2835589} meaning the system was usable. Additionally, participants enjoyed having an extra aid which improved their perceived safety whilst keeping their visual senses free. However, the commutes where participants used TactiHelm showed no significant difference regarding workload compared to those without; although this study does give some initial insights into expected NASA-RTLX scores for cycling tasks. Notably, some participants stated the cues were often too intense, which differs from our results from the previous study where participants sometimes struggled to perceive vibrations. Although, it may be useful to create a sense of urgency in a hazard-notification system, such a system should not cause its users to worry.
 
@@ -460,7 +460,7 @@ This inaccuracy was likely caused by a variety of issues. It is possible that ou
 \section{Conclusions}
 This paper continued previous work from Vo et al. \cite{10.1145/3411763.3451580}, to develop TactiHelm: a vibrotactile, helmet-based, hazard-notification system, which can effectively warn a cyclist of vehicles approaching from behind. We combined a commercial bike radar with a modified cycling helmet to detect approaching vehicle's distance and speed and subsequently convey this to the cyclists' head using tactile actuators placed along the sagittal midline of the helmet. This design was informed by our conducted online survey, which confirmed cyclists' desire for an easy to use safety system which can prevent potential collisions and injuries from other road vehicles.
 
-Through a lab-based study we specifically defined the various parameters which compose a vibrotactile stimulus, rhythm, and cue, and investigated how these parameters effect tactile perception and interpretation on the scalp. We found that the sagittal plane of the scalp was a suitable location for vibrotactile stimulation. More so, results showed that encoding distance using the number of deliveries of a cue allows for significantly easier interpretation of distance, compared to using the pattern (location and delay) of a stimulus, due to the ability to infer a distance from the number of vibrations. Although, tactile patterns which utilise the sensory saltation illusion are more preferred by participants due to the sensation of movement it creates on the scalp.
+Through a lab-based study we specifically defined the various parameters which compose a vibrotactile stimulus, rhythm, and cue, and investigated how these parameters effect tactile perception and interpretation on the scalp. We found that the sagittal plane of the scalp was a suitable location for vibrotactile stimulation. More so, results showed that encoding distance using the number of deliveries of a cue allows for significantly easier interpretation of distance, compared to using the pattern (location and delay) of a stimulus, due to the ability to infer a distance from the number of vibrations. Although, tactile patterns which utilise the sensory saltation illusion were more preferred by participants due to the sensation of movement it creates on the scalp.
 
 Our final system was shown to be effective in real life, with participants in our real world user study reporting that they found the vibrotactile cues easily perceptible and helpful in portraying the image of an approaching vehicle. Additionally, results from the SUS questionnaire show that participants found the system usable. Despite the NASA-RTLX results showing that usage of TactiHelm caused no significant difference in workload for cycling, participants enjoyed that their visual senses could remain free. However, due to various reasons related to the implementation of the system, participants did not find the 3-level categorisation of distance information useful, preferring only the \textit{imminent} and \textit{far} cues.
 
